# arm_simulator

./: CMakeLists.txt  package.xml
include/: JointCommandSystemPlugin.hpp  JointPositionController.hpp
launch/: UR_launch.py  classic.py  full.py  launch.py  other.py  sim.py  simold.py
models/: manipulator.urdf.xacro  model.sdf
models/ur10/: model.config  model.sdf
src/: JointCommandSystemPlugin.cpp  JointPositionController.cpp  RateController.cpp  joint_control.cpp
urdf/: manipulator.sdf  manipulator.urdf  old_manip.urdf  test.urdf
worlds/: UR.world  empty.sdf  empty.world  sim.sdf  sim_world.sdf  test.sdf
